[gd_scene load_steps=2 format=3 uid="uid://bn7w3wo3h35cm"]

[ext_resource type="Script" uid="uid://bt2u7a31c8gq2" path="res://ui/MainDesktop.gd" id="1_sk313"]

[node name="MainDesktop" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_sk313")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 1, 0)

[node name="Desktop" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TaskBar" type="HBoxContainer" parent="."]
z_index = 900
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -42.0
grow_horizontal = 2
grow_vertical = 0

[node name="MenuButton" type="MenuButton" parent="TaskBar"]
layout_mode = 2

[node name="DockContainer" type="HBoxContainer" parent="TaskBar"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Control" type="Control" parent="TaskBar"]
layout_mode = 2
size_flags_horizontal = 8
